# robot-native

./: .gitignore  .travis.yml  CMakeLists.txt  Readme.md  appveyor.yml  conanfile.txt  main.js  package.json  test.js
.travis/: run.sh
assets/: dialog.html  robot-native.node
src/: face_detector.cpp  face_recognition_demo.cpp  faceapi.cpp  main.cpp
